--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <img class="logo" src="images/favicon.ico">
-    <a href="#home" class="w3-bar-item w3-button"><b>ASTRA</b> VOYAGE</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+<div class="navigation-bar">
+    <div id="navigation-container">
+        <img src="limages/favicon.ico"> 
+        <ul>
+            <li><a href="#">ASTRA.VOYAGE</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Get in Touch</a></li>
+        </ul>
     </div>
-  </div>
 </div>
 
 <!-- Header -->
