--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Navbar (sit on top) -->
 <div class="navigation-bar">
     <div id="navigation-container">
-        <img src="limages/favicon.ico"> 
+        <img src="images/favicon.ico"> 
         <ul>
             <li><a href="#">ASTRA.VOYAGE</a></li>
             <li><a href="#">Projects</a></li>
