--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 </head>
 <body>
 
-<!-- Navbar (sit on top) -->
-<div class="navigation-bar">
-    <div id="navigation-container">
-        <img width="256" height="256" src="images/favicon.ico"> 
-        <ul>
-            <li><a href="#">ASTRA.VOYAGE</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Get in Touch</a></li>
-        </ul>
-    </div>
-</div>
+  <div class="topnav" id="myTopnav">
+    <a href="#home" class="active">
+      <img width="256" height="256" src="images/favicon.ico"> 
+    </a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
