--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">
-        <img width="256" height="256" src="images/favicon.ico"> 
-      </a>
+      <a href="#home" class="active">Home</a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
@@ -18,6 +16,22 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
+
+    <div style="padding-left:16px">
+      <h2>Responsive Topnav Example</h2>
+      <p>Resize the browser window to see how it works.</p>
+    </div>
+
+    <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
+    }
+    </script>
   </body>
 </html>
 
