--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="header">
-      <a href="#default" class="logo">CompanyLogo</a>
+      <a href="#default" class="logo">
+        <img width="256" height="256" src="images/favicon.ico"> 
+      </a>
       <div class="header-right">
         <a class="active" href="#home">Home</a>
         <a href="#contact">Contact</a>
