--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <a href="#default" class="logo">
-        <img width="256" height="256" src="images/favicon.ico"> 
+        <img class="logo" src="images/favicon.ico"> 
       </a>
       <div class="header-right">
         <a class="active" href="#home">Home</a>
