--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 display-5 text-uppercase text-primary">
-                    <img src="img/favicon.ico">
+                    <img class="logo "src="img/favicon.ico">
                     ASTRA.VOYAGE
                 </h1>
             </a>
