--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>ASTRA.</b> VOYAGE</a>
+    <a href="#home" class="w3-bar-item w3-button">
+      <div>
+        <b>ASTRA.</b> VOYAGE
+        <img class="logo" src="img/favicon.ico">
+      </div>
+    </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#projects" class="w3-bar-item w3-button">VALIDATORS</a>
