--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button">
+<div class="astra-nav">
+  <div class="astra-nav-style">
+    <a href="#home" class="astra-link-item astra-button">
       <div>
         <b>ASTRA.</b> VOYAGE
         <img class="logo" src="img/favicon.ico">
@@ -20,9 +20,9 @@
     </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">VALIDATORS</a>
-      <a href="#about" class="w3-bar-item w3-button">UPCOMING</a>
-      <a href="#contact" class="w3-bar-item w3-button">CONTACT</a>
+      <a href="#projects" class="astra-link-item astra-button">VALIDATORS</a>
+      <a href="#about" class="astra-link-item astra-button">UPCOMING</a>
+      <a href="#contact" class="astra-link-item astra-button">CONTACT</a>
     </div>
   </div>
 </div>
