--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+<header class="astra-header" style="max-width:1500px;" id="home">
   <img class="astra-image" src="img/astra_voyage_background.png" alt="astra_voyage_background" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>ASTRA</b></span> <span class="w3-hide-small w3-text-light-grey">VOYAGE</span></h1>
