--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
 <!-- Header -->
 <header class="astra-header" style="max-width:1500px;" id="home">
   <img class="astra-image" src="img/astra_voyage_background.png" alt="astra_voyage_background" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>ASTRA</b></span> <span class="w3-hide-small w3-text-light-grey">VOYAGE</span></h1>
+  <div class="astra-header-title-box">
+    <h1 class="astra-header-title">
+      <span class="astra-span">
+        <b>ASTRA</b>
+      </span> 
+      <span class="voyage-span">
+        VOYAGE
+      </span>
+    </h1>
   </div>
 </header>
 
