--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 
 <!-- Header -->
 <header class="astra-header" style="max-width:1500px;" id="home">
-  <img class="astra-image" src="img/astra_voyage_background.png" alt="astra_voyage_background" width="1500" height="800">
-  <div class="star-field">
+
+  <div class="astra-image" src="img/astra_voyage_background.png">
+    <div class="star-field">
       <div class="layer"></div>
       <div class="layer"></div>
       <div class="layer"></div>
+    </div>
   </div>
+
   <div class="astra-header-title-box">
     <h1 class="astra-header-title">
       <span class="astra-span">
