--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- Header -->
 <header class="astra-header" style="max-width:1500px;" id="home">
 
-  <div class="astra-image" src="img/astra_voyage_background.png">
+  <div class="astra-image">
     <div class="star-field">
       <div class="layer"></div>
       <div class="layer"></div>
