--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 <!-- Header -->
 <header class="astra-header" style="max-width:1500px;" id="home">
-  <img class="astra-image" src="img/astra_voyage_background.png" alt="astra_voyage_background" width="1500" height="800">
   <div class="star-field">
+      <img class="astra-image">
       <div class="layer"></div>
       <div class="layer"></div>
       <div class="layer"></div>
