--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
         <img class="logo" src="img/favicon.ico">
       </div>
     </a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
+
+    <div class="astra-nav-left">
       <a href="#projects" class="astra-link-item astra-button">VALIDATORS</a>
       <a href="#about" class="astra-link-item astra-button">UPCOMING</a>
       <a href="#contact" class="astra-link-item astra-button">CONTACT</a>
+    </div>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="astra-nav-right">
+      <a href="#projects" class="astra-link-item astra-button">TWITTER</a>
+      <a href="#about" class="astra-link-item astra-button">GITHUB</a>
+      <a href="#contact" class="astra-link-item astra-button">DISCORD</a>
     </div>
   </div>
 </div>
