--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </a>
 
-    <div class="astra-nav-left">
+    <div class="astra-nav-center">
       <a href="#projects" class="astra-link-item astra-button">VALIDATORS</a>
       <a href="#about" class="astra-link-item astra-button">UPCOMING</a>
       <a href="#contact" class="astra-link-item astra-button">CONTACT</a>
