--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <!-- Navbar (sit on top) -->
 <div class="astra-nav">
   <div class="astra-nav-style">
-    <a href="#home" class="astra-link-item astra-button">
-      <div>
-        <b>ASTRA.</b> VOYAGE
-        <img class="logo" src="img/favicon.ico">
-      </div>
-    </a>
-
+    
+    <div class="astra-nav-left">
+      <a href="#home" class="astra-link-item astra-button">
+        <div>
+          <b>ASTRA.</b> VOYAGE
+          <img class="logo" src="img/favicon.ico">
+        </div>
+      </a>
+    </div>
     <div class="astra-nav-center">
       <a href="#projects" class="astra-link-item astra-button">VALIDATORS</a>
       <a href="#about" class="astra-link-item astra-button">UPCOMING</a>
