--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </a>
     </div>
     <div class="astra-nav-center">
-      <a href="#projects" class="astra-link-item astra-button">VALIDATORS</a>
+      <a href="#projects" class="astra-link-item astra-button">VALIDATOR</a>
       <a href="#about" class="astra-link-item astra-button">UPCOMING</a>
       <a href="#contact" class="astra-link-item astra-button">CONTACT</a>
     </div>
