--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <!-- Header -->
-<header class="astra-header" style="max-width:1500px;" id="home">
+<header class="astra-header" id="home">
   <div class="star-field">
       <img class="astra-image" src="img/astra_voyage_background.png" alt="astra_voyage_background">
       <div class="layer"></div>
