--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
   <body>
 
-    <ul class="topnav">
-      <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li class="right"><a href="#about">About</a></li>
+    <ul class="astra-voyage-nav">
+      <li><a href="#networks">NETWORKS</a></li>
+      <li><a href="#upcoming">UPCOMING</a></li>
+      <li><a class="active" href="#contact">CONTACT</a></li>
+      <li class="right"><a href="#about">stuff</a></li>
     </ul>
 
     <div style="padding:0 16px;">
