--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <!-- Centered link -->
       <div class="topnav-centered">
         <a href="#home" class="active">Home</a>
+        <a href="#home" class="active">Home</a>
       </div>
       
       <!-- Left-aligned links (default) -->
