--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
       <!-- Centered link -->
       <div class="topnav-centered">
-        <a href="#home" class="active">Home</a>
-        <a href="#home" class="active">Home</a>
+        <a href="#networks" class="active">NETWORKS</a>
+        <a href="#upcoming" class="">UPCOMING</a>
+        <a href="#contact" class="">CONTACT</a>
       </div>
       
       <!-- Left-aligned links (default) -->
