--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <div class="topnav">
 
       <!-- Centered link -->
-      <div class="topnav-centered">
-        <a href="#networks" class="active">NETWORKS</a>
-        <a href="#upcoming" class="">UPCOMING</a>
-        <a href="#contact" class="">CONTACT</a>
-      </div>
+      <ul class="topnav-centered">
+        <li><a href="#networks">NETWORKS</a></li>
+        <li><a href="#upcoming">UPCOMING</a></li>
+        <li><a class="active" href="#home">CONTACT</a></li>
+      </ul>
       
       <!-- Left-aligned links (default) -->
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
+      <a href="#home">ASTRA.VOYAGE</a>
       
       <!-- Right-aligned links -->
       <div class="topnav-right">
