--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body>
 
     <!-- Top navigation -->
+    <!-- Top navigation -->
     <div class="topnav">
 
       <!-- Centered link -->
-      <ul class="topnav-centered">
-        <li><a href="#networks">NETWORKS</a></li>
-        <li><a href="#upcoming">UPCOMING</a></li>
-        <li><a class="active" href="#home">CONTACT</a></li>
-      </ul>
+      <div class="topnav-centered">
+        <a href="#home" class="active">Home</a>
+      </div>
       
       <!-- Left-aligned links (default) -->
-      <a href="#home">ASTRA.VOYAGE</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
       
       <!-- Right-aligned links -->
       <div class="topnav-right">
