--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
       <!-- Centered link -->
       <div class="topnav-centered">
-        <a href="#home" class="active">Home</a>
+        <ul class="nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about/">About</a></li>
+          <li><a href="/work/">Work</a></li>
+          <li><a href="/clients/">Clients</a></li>
+          <li><a href="/contact/">Contact</a></li>
+        </ul>
       </div>
       
       <!-- Left-aligned links (default) -->
