--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
     <div class="topnav">
 
       <!-- Centered link -->
-        <ul class="nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
-          <li><a href="/work/">Work</a></li>
-          <li><a href="/clients/">Clients</a></li>
-          <li><a href="/contact/">Contact</a></li>
-        </ul>
+      <div class="topnav-centered">
+        <a href="#networks" class="active">NETWORKS</a>
+        <a href="#upcoming" class="active">UPCOMING</a>
+      </div>
       
       <!-- Left-aligned links (default) -->
       <a href="#news">News</a>
