--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
       <!-- Centered link -->
       <div class="topnav-centered">
-        <a href="#networks" class="active">NETWORKS</a>
-        <a href="#upcoming" class="active">UPCOMING</a>
+        <a href="#networks" style="margin-right: 10rem;" class="active">NETWORKS</a>
+        <a href="#upcoming" style="margin-left: 10rem; margin-right: 10rem;" class="active">UPCOMING</a>
+        <a href="#contact" style="margin-left: 10rem;">CONTACT</a>
       </div>
       
       <!-- Left-aligned links (default) -->
       <a href="#news">News</a>
-      <a href="#contact">Contact</a>
       
       <!-- Right-aligned links -->
       <div class="topnav-right">
