--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
 </head>
   <body>
 
-    <!-- Top navigation -->
-    <!-- Top navigation -->
-    <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
+    <ul class="topnav">
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li class="right"><a href="#about">About</a></li>
+    </ul>
+
 
     <div style="padding:0 16px;">
       <h2>Responsive Topnav Example</h2>
