--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li class="left">
         <a href="#news">News</a>
       </li>
-      <li>
+      <li class="left">
         <a href="#contact">Contact</a>
       </li>
       <li class="right">
