--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <body>
 
     <ul class="topnav">
-      <li class="left">
+      <li class="">
         <a class="active" href="#home">Home</a>
       </li>
-      <li class="left">
+      <li class="">
         <a href="#news">News</a>
       </li>
-      <li class="left">
+      <li class="">
         <a href="#contact">Contact</a>
       </li>
-      <li class="right">
+      <li class="">
         <a href="#about">About</a>
       </li>
     </ul>
