--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
     <ul class="topnav">
       <li class="left">
-        <a class="active" href="#home">Home</a>
-      </li>
-      <li class="left">
-        <a href="#news">News</a>
+        <a class="active" href="#home">HOME</a>
       </li>
       <li class="">
-        <a href="#contact">Contact</a>
+        <a href="#networks">NETWORKS</a>
+      </li>
+      <li class="">
+        <a href="#upcoming">UPCOMING</a>
+      </li>
+      <li class="">
+        <a href="#contact">CONTACT</a>
       </li>
       <li class="right">
-        <a href="#about">About</a>
+        <a href="#about">ABOUT</a>
       </li>
     </ul>
 
