--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <li class="left">
         <a class="active" href="#home">HOME</a>
       </li>
-      <li class="">
+      <li class="center">
         <a href="#networks">NETWORKS</a>
       </li>
-      <li class="">
+      <li class="center">
         <a href="#upcoming">UPCOMING</a>
       </li>
-      <li class="">
+      <li class="center">
         <a href="#contact">CONTACT</a>
       </li>
       <li class="right">
