--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <title>ASTRA.VOYAGE</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/astra-style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/astra-style.css">
+  <script type="text/javascript" href="js/astra-script.js"></script>
 </head>
   <body>
 
@@ -27,8 +28,8 @@
     </ul>
 
 
-    <div class="main">
-      
+    <div class="stars-outer">
+      <div id="stars-sky" />
     </div>
 
     
