--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ASTRA.VOYAGE</title>
+  <title>ASTRA.VOYAGE</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/astra-style.css">
-  <script type="text/javascript" href="js/astra-script.js"></script>
 </head>
   <body>
 
@@ -28,10 +27,12 @@
     </ul>
 
 
-    <div class="stars-outer">
-      <div id="stars-sky" />
+    <div id="sky">
     </div>
 
     
   </body>
+  <footer>
+      <script type="text/javascript" href="js/astra-script.js"></script>
+  </footer>
 </html>
