--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     
   </body>
   <footer>
-      <script type="text/javascript" href="js/astra-script.js"></script>
+      <script type="text/javascript" src="js/astra-script.js"></script>
   </footer>
 </html>
