--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <ul class="topnav">
       <li class="left">
-        <a class="active" href="#home">HOME</a>
+        <a href="#home">HOME</a>
       </li>
       <li class="center">
         <a href="#networks">NETWORKS</a>
