--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <ul class="topnav">
       <li class="left">
-        <a href="#home">ASTRA.VOYAGE
+        <a class="astra-logo-link" href="#home">
           <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:42px;height:42px;">
+          ASTRA.VOYAGE
         </a>
       </li>
       <li class="center">
