--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         </a>
       </li>
       <li class="center">
-        <a href="#networks">NETWORKS</a>
+        <a class="astra-nav-link" href="#networks">NETWORKS</a>
       </li>
       <li class="center">
-        <a href="#upcoming">UPCOMING</a>
+        <a class="astra-nav-link" href="#upcoming">UPCOMING</a>
       </li>
       <li class="center">
-        <a href="#contact">CONTACT</a>
+        <a class="astra-nav-link" href="#contact">CONTACT</a>
       </li>
       <li class="right">
-        <a href="#about">ABOUT</a>
+        <a class="astra-nav-link" href="#about">ABOUT</a>
       </li>
     </ul>
 
