--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
 
     <div class="astra-voyage-body" id="astra-voyage-body">
+
+      <div class="astra-voyage-header">
+        <h1>ASTRA.VOYAGE</h1>
+        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
+      </div>
+
     </div>
 
     
