--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
         <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
 
+      <div class="astra-voyage-row">
+        <div class="col-3">
+          1
+        </div>
+        <div class="col-3">
+          2
+        </div>
+        <div class="col-3">
+          3
+        </div>
+        <div class="col-3">
+          4
+        </div>
+      </div>
+
     </div>
 
     
