--- a/index.html
+++ b/index.html
@@ -52,6 +52,36 @@
         </div>
       </div>
 
+      <div class="astra-voyage-row">
+        <div class="col-3">
+          1
+        </div>
+        <div class="col-3">
+          2
+        </div>
+        <div class="col-3">
+          3
+        </div>
+        <div class="col-3">
+          4
+        </div>
+      </div>
+
+      <div class="astra-voyage-row">
+        <div class="col-3">
+          1
+        </div>
+        <div class="col-3">
+          2
+        </div>
+        <div class="col-3">
+          3
+        </div>
+        <div class="col-3">
+          4
+        </div>
+      </div>
+
     </div>
 
     
