--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
 
+      <div class="card">
+        <div class="container">
+          <h4><b>Jane Doe</b></h4> 
+          <p>Interior Designer</p> 
+        </div>
+      </div>
+
     
   </body>
   <footer>
