--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
         <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
 
-      <div class="card">
-        <div class="container">
-          <h4><b>Jane Doe</b></h4> 
+      <div>
+        <div>
           <p>Interior Designer</p> 
         </div>
       </div>
