--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="astra-voyage-body" id="astra-voyage-body">
 
-      <div class="astra-voyage-header">
+      <div class="astra-voyage-header" id="astra-voyage-header">
         <h1>ASTRA.VOYAGE</h1>
         <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
