--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <div class="astra-voyage-body" id="astra-voyage-body">
 
       <div class="astra-voyage-header" id="astra-voyage-header">
-        ASTRA.VOYAGE
+        <h1>ASTRA.VOYAGE</h1>
+        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
   </body>
   <footer>
