--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
     <div class="astra-voyage-body" id="astra-voyage-body">
 
-      <div class="astra-voyage-header" id="astra-voyage-header">
-        <h1>ASTRA.VOYAGE</h1>
-        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
+      <div id="astra-voyage-header">
+        ASTRA.VOYAGE
+        Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
   </body>
 </html>
