--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/astra-style.css">
-  <script type="text/javascript" src="js/astra-script.js"></script>
 </head>
   <body>
 
@@ -33,9 +32,12 @@
 
     <div class="astra-voyage-body" id="astra-voyage-body">
 
-      <div id="astra-voyage-header">
-        ASTRA.VOYAGE
-        Professional Validators Securing & Decentralizing The Cosmos</p>
+      <div class="astra-voyage-header" id="astra-voyage-header">
+        <h1>ASTRA.VOYAGE</h1>
+        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
   </body>
+  <footer>
+      <script type="text/javascript" src="js/astra-script.js"></script>
+  </footer>
 </html>
