--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/astra-style.css">
 </head>
-  <body id="astra-voyage-body">
+  <body>
+
+    <div class="stars"></div>
+    <div class="twinkling"></div>
+    <div class="clouds"></div>
 
     <ul class="topnav">
       <li class="left">
@@ -29,13 +33,6 @@
       </li>
     </ul>
 
-
-    <div class="astra-voyage-body">
-
-      <div class="astra-voyage-header">
-        <h1>ASTRA.VOYAGE</h1>
-        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
-      </div>
   </body>
   <footer>
       <script type="text/javascript" src="js/astra-script.js"></script>
