--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ASTRA.VOYAGE</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/astra-style.css">
-  </head>
-  <body>
+<head>
+  <title>ASTRA.VOYAGE</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/astra-style.css">
+</head>
+  <body id="astra-voyage-body">
+
+    <ul class="topnav">
+      <li class="left">
+        <a class="astra-logo-link" href="#home">
+          <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:42px;height:42px;">
+          ASTRA.VOYAGE
+        </a>
+      </li>
+      <li class="center">
+        <a class="astra-nav-link" href="#networks">NETWORKS</a>
+      </li>
+      <li class="center">
+        <a class="astra-nav-link" href="#upcoming">UPCOMING</a>
+      </li>
+      <li class="center">
+        <a class="astra-nav-link" href="#contact">CONTACT</a>
+      </li>
+      <li class="right">
+        <a class="astra-nav-link" href="#about">ABOUT</a>
+      </li>
+    </ul>
 
 
-    <div class="stars"></div>
-    <div class="twinkling"></div>
+    <div class="astra-voyage-body">
 
+      <div class="astra-voyage-header">
+        <h1>ASTRA.VOYAGE</h1>
+        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
+      </div>
   </body>
   <footer>
       <script type="text/javascript" src="js/astra-script.js"></script>
