--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/astra-style.css">
 </head>
-  <body id="astra-voyage-body">
+  <body>
 
     <ul class="topnav">
       <li class="left">
@@ -30,7 +30,7 @@
     </ul>
 
 
-    <div class="astra-voyage-body">
+    <div class="astra-voyage-body" id="astra-voyage-body">
 
       <div class="astra-voyage-header">
         <h1>ASTRA.VOYAGE</h1>
