--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         <h1>ASTRA.VOYAGE</h1>
         <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
+
+      <br><br>
+
+      <div class="astra-voyage-header">
+        <h1>ASTRA.VOYAGE</h1>
+        <p>Professional Validators Securing & Decentralizing The Cosmos</p>
+      </div>
+
+    </div>
+
   </body>
   <footer>
       <script type="text/javascript" src="js/astra-script.js"></script>
