--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 
-      <div class="astra-voyage-header">
+      <div class="astra-voyage-header" id="astra-voyage-header">
         <h1>ASTRA.VOYAGE</h1>
         <p>Professional Validators Securing & Decentralizing The Cosmos</p>
       </div>
