--- a/index.html
+++ b/index.html
@@ -8,8 +8,31 @@
 </head>
   <body>
 
+    <ul class="topnav">
+      <li class="left">
+        <a class="astra-logo-link" href="#home">
+          <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:42px;height:42px;">
+          ASTRA.VOYAGE
+        </a>
+      </li>
+      <li class="center">
+        <a class="astra-nav-link" href="#networks">NETWORKS</a>
+      </li>
+      <li class="center">
+        <a class="astra-nav-link" href="#upcoming">UPCOMING</a>
+      </li>
+      <li class="center">
+        <a class="astra-nav-link" href="#contact">CONTACT</a>
+      </li>
+      <li class="right">
+        <a class="astra-nav-link" href="#about">ABOUT</a>
+      </li>
+    </ul>
+
     <div class="star-container"></div>
     <div class="twinkle"></div>
+
+
 
   </body>
   <footer>
