--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
     <div class="twinkle"></div>
 
 
+    <div class="astra-voyage-header">
+      <h1 class="astra-voyage-header-title">
+        ASTRA.VOYAGE
+      </h1>
+      <p class="astra-voyage-header-subtitle">
+         Professional Validators Securing & Decentralizing The Cosmos
+      </p>
+    </div>
 
   </body>
   <footer>
