--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
       </p>
     </div>
 
+    <div class="row">
+      <div class="col-3">
+        <ul>
+          <li>val 1</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul>
+          <li>val 2</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul>
+          <li>val 3</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <ul>
+          <li>val 4</li>
+        </ul>
+      </div>
+    </div>
+
   </body>
   <footer>
       <script type="text/javascript" src="js/astra-script.js"></script>
