--- a/index.html
+++ b/index.html
@@ -44,24 +44,36 @@
 
     <div class="row">
       <div class="col-3">
-        <ul>
-          <li>val 1</li>
-        </ul>
+        <div class="card">
+          <div class="container">
+            <h4><b>John Doe</b></h4> 
+            <p>Architect & Engineer</p> 
+          </div>
+        </div>
       </div>
       <div class="col-3">
-        <ul>
-          <li>val 2</li>
-        </ul>
+        <div class="card">
+          <div class="container">
+            <h4><b>John Doe</b></h4> 
+            <p>Architect & Engineer</p> 
+          </div>
+        </div>
       </div>
       <div class="col-3">
-        <ul>
-          <li>val 3</li>
-        </ul>
+        <div class="card">
+          <div class="container">
+            <h4><b>John Doe</b></h4> 
+            <p>Architect & Engineer</p> 
+          </div>
+        </div>
       </div>
       <div class="col-3">
-        <ul>
-          <li>val 4</li>
-        </ul>
+        <div class="card">
+          <div class="container">
+            <h4><b>John Doe</b></h4> 
+            <p>Architect & Engineer</p> 
+          </div>
+        </div>
       </div>
     </div>
 
