--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
       <div class="col-3">
         <div class="card">
           <div class="container">
-            <h4><b>John Doe</b></h4> 
-            <p>Architect & Engineer</p> 
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
           </div>
         </div>
       </div>
       <div class="col-3">
         <div class="card">
           <div class="container">
-            <h4><b>John Doe</b></h4> 
-            <p>Architect & Engineer</p> 
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
           </div>
         </div>
       </div>
       <div class="col-3">
         <div class="card">
           <div class="container">
-            <h4><b>John Doe</b></h4> 
-            <p>Architect & Engineer</p> 
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
           </div>
         </div>
       </div>
       <div class="col-3">
         <div class="card">
           <div class="container">
-            <h4><b>John Doe</b></h4> 
-            <p>Architect & Engineer</p> 
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
           </div>
         </div>
       </div>
