--- a/index.html
+++ b/index.html
@@ -77,6 +77,68 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
   <footer>
       <script type="text/javascript" src="js/astra-script.js"></script>
