--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       </p>
     </div>
 
+    <div class="astra-voyage-header">
+      <h1 class="astra-voyage-header-title">
+        NETWORKS
+      </h1>
+    </div>
     <div class="row">
       <div class="col-3">
         <div class="card">
@@ -103,7 +108,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="row">
       <div class="col-3">
         <div class="card">
