--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         NETWORKS
       </h1>
     </div>
+
     <div class="row">
       <div class="col-3">
         <div class="card">
@@ -142,6 +143,53 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="astra-voyage-header">
+      <h1 class="astra-voyage-header-title">
+        UPCOMING NETWORKS
+      </h1>
+    </div>
+    
+    <div class="row">
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card">
+          <div class="container">
+            <h4><b>VALIDATOR NAME</b></h4> 
+            <p>VALIDATOR SYMBOL</p> 
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="astra-voyage-header">
+      <h1 class="astra-voyage-header-title">
+        TEAM
+      </h1>
     </div>
 
   </body>
