--- a/index.html
+++ b/index.html
@@ -194,6 +194,17 @@
 
   </body>
   <footer>
+     <div class="row">
+      <div class="col-4">
+        Some other bs
+      </div>
+      <div class="col-4">
+        ASTRA.VOYAGE &copy 2022
+      </div>
+      <div class="col-4">
+        Social Media Symbols
+      </div>
+    </div>
       <script type="text/javascript" src="js/astra-script.js"></script>
   </footer>
 </html>
