--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/astra-style.css">
   </head>
-  <body>
-
-    <div class="star-container"></div>
+  <body class="star-container">
     <div class="twinkle"></div>
 
     <ul class="topnav">
