--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/astra-style.css">
   </head>
-  <body class="star-container">
+  <body>
+
+    <div class="star-container"></div>
     <div class="twinkle"></div>
 
     <ul class="topnav">
