--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="row">
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -85,7 +85,7 @@
 
     <div class="row">
       <div class="col-4">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -112,7 +112,7 @@
 
     <div class="row">
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -128,7 +128,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -153,7 +153,7 @@
     
     <div class="row">
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -161,7 +161,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -169,7 +169,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="card">
+        <div class="astra-voyage-validator">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -190,6 +190,41 @@
       <h1 class="astra-voyage-header-title">
         TEAM
       </h1>
+    </div>
+
+    <div class="row">
+      <div class="col-3">
+        <div class="astra-voyage-team">
+          <div class="container">
+            <h4><b>TEAM MEMBER 1</b></h4> 
+            <p>BACKGROUND</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="astra-voyage-team">
+          <div class="container">
+            <h4><b>TEAM MEMBER 1</b></h4> 
+            <p>BACKGROUND</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="astra-voyage-team">
+          <div class="container">
+            <h4><b>TEAM MEMBER 1</b></h4> 
+            <p>BACKGROUND</p> 
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="astra-voyage-team">
+          <div class="container">
+            <h4><b>TEAM MEMBER 1</b></h4> 
+            <p>BACKGROUND</p> 
+          </div>
+        </div>
+      </div>
     </div>
 
   </body>
