--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
 
     <div class="row">
-      <div class="col-3">
+      <div class="col-6">
         <div class="astra-voyage-team">
           <div class="container">
             <h4><b>TEAM MEMBER 1</b></h4> 
@@ -201,7 +201,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6">
         <div class="astra-voyage-team">
           <div class="container">
             <h4><b>TEAM MEMBER 1</b></h4> 
@@ -209,7 +209,10 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+    </div>
+
+    <div class="row">
+      <div class="col-6">
         <div class="astra-voyage-team">
           <div class="container">
             <h4><b>TEAM MEMBER 1</b></h4> 
@@ -217,7 +220,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6">
         <div class="astra-voyage-team">
           <div class="container">
             <h4><b>TEAM MEMBER 1</b></h4> 
