--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
     <div class="row">
       <div class="col-3">
-        <div class="astra-voyage-validator">
+        <div class="astra-voyage-validator" id="akash">
+          <img src="img/validators/akash_logo.png" alt="akash logo" style="width:64px">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -60,7 +61,8 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="astra-voyage-validator">
+        <div class="astra-voyage-validator" id="cerberus">
+          <img src="img/validators/cerberus_logo.png" alt="cerberus logo" style="width:64px">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -68,7 +70,8 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="astra-voyage-validator">
+        <div class="astra-voyage-validator" id="chihuahua">
+          <img src="img/validators/chihuahua_logo.png" alt="chihuahua logo" style="width:64px">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -76,7 +79,8 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="astra-voyage-validator">
+        <div class="astra-voyage-validator" id="e_money">
+          <img src="img/validators/e_money_logo.png" alt="e-money logo" style="width:64px">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -87,7 +91,8 @@
 
     <div class="row">
       <div class="col-4">
-        <div class="astra-voyage-validator">
+        <div class="astra-voyage-validator" id="juno">
+          <img src="img/validators/juno_logo.png" alt="juno logo" style="width:64px">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -96,6 +101,7 @@
       </div>
       <div class="col-4">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar" style="width:100%">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -104,6 +110,7 @@
       </div>
       <div class="col-4">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar" style="width:100%">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -115,6 +122,7 @@
     <div class="row">
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar" style="width:100%">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -123,6 +131,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar" style="width:100%">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -191,7 +200,7 @@
     </div>
 
     <hr>
-    
+
     <div class="astra-voyage-header">
       <h1 class="astra-voyage-header-title">
         TEAM
