--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="col-3">
         <div class="astra-voyage-validator" id="akash">
-          <img src="img/validators/akash_logo.png" alt="akash logo" style="width:64px">
+          <img src="img/validators/akash_logo.png" alt="akash logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -62,7 +62,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator" id="cerberus">
-          <img src="img/validators/cerberus_logo.png" alt="cerberus logo" style="width:64px">
+          <img src="img/validators/cerberus_logo.png" alt="cerberus logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -71,7 +71,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator" id="chihuahua">
-          <img src="img/validators/chihuahua_logo.png" alt="chihuahua logo" style="width:64px">
+          <img src="img/validators/chihuahua_logo.png" alt="chihuahua logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -80,7 +80,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator" id="e_money">
-          <img src="img/validators/e_money_logo.png" alt="e-money logo" style="width:64px">
+          <img src="img/validators/e_money_logo.png" alt="e-money logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -92,7 +92,7 @@
     <div class="row">
       <div class="col-4">
         <div class="astra-voyage-validator" id="juno">
-          <img src="img/validators/juno_logo.png" alt="juno logo" style="width:64px">
+          <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -101,7 +101,7 @@
       </div>
       <div class="col-4">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar" style="width:100%">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -110,7 +110,7 @@
       </div>
       <div class="col-4">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar" style="width:100%">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -122,7 +122,7 @@
     <div class="row">
       <div class="col-3">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar" style="width:100%">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -131,7 +131,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar" style="width:100%">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -140,6 +140,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -148,6 +149,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -167,6 +169,7 @@
     <div class="row">
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -175,6 +178,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -183,6 +187,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -191,6 +196,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
+          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
