--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="konstellation">
+          <img src="img/validators/konstellation_logo.png" alt="konstellation logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -109,8 +109,8 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="meme">
+          <img src="img/validators/meme_logo.png" alt="me logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -121,8 +121,8 @@
 
     <div class="row">
       <div class="col-3">
-        <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="microtick">
+          <img src="img/validators/microtick_logo.png" alt="microtick logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -130,8 +130,8 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="nomic">
+          <img src="img/validators/nomic_logo.png" alt="nomic logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -139,8 +139,8 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="osmosis">
+          <img src="img/validators/osmosis_logo.png" alt="osmosis logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -148,8 +148,8 @@
         </div>
       </div>
       <div class="col-3">
-        <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="sif chain">
+          <img src="img/validators/sif_chain_logo.png" alt="sif chain logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -169,7 +169,7 @@
     <div class="row">
       <div class="col-3">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+          <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -178,7 +178,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+          <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -187,7 +187,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+          <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
@@ -196,7 +196,7 @@
       </div>
       <div class="col-3">
         <div class="astra-voyage-validator">
-          <img src="img_avatar.png" alt="Avatar"  class="astra-voyage-validator-logo">
+          <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
